--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>快乐的小贾同学</title>
     <<script type="text/javascript">
-       window.location.replace("https://www.runoob.com");
+       window.location.replace("https://blog.j3dream.top");
     </script>
   </head>
   <body>
