--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <title>快乐的小贾同学</title>
-    <<script type="text/javascript">
+    <script type="text/javascript">
        window.location.replace("https://blog.j3dream.top");
     </script>
   </head>
